--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    
+
     <head>
         <meta charset="utf-8">
         <title>App</title>
     </head>
 
     <body>
+        {{> navbar }}
         {{ message }}
     </body>
 
