Implemented some Partials

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
     <head>
+        <!-- Required meta tags -->
         <meta charset="utf-8">
-        <title>App</title>
-    </head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+
+        <title>{{ title }}</title>
+    </head>
     <body>
         {{> navbar }}
         {{ message }}
+        {{> scripts }}
     </body>
-
 </html>
