--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-
-        <title>{{ title }}</title>
+        {{> header }}
     </head>
     <body>
         {{> navbar }}
