--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,9 @@
         {{> header }}
     </head>
     <body>
-        {{> navbar }}
+        <header>
+            {{> navbar }}
+        </header>
         {{ message }}
         {{> scripts }}
     </body>
