--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,6 +6,7 @@
     <body>
         <header>
             {{> navbar }}
+            {{> scroller }}
         </header>
         {{ message }}
         {{> scripts }}
