--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,11 +2,10 @@
 <html lang="en" class="h-100">
     <head>
         {{> header }}
+        <link href="/partials/floating-labels.css" rel="stylesheet">
     </head>
     <body class="d-flex flex-column h-100">
-        {{> navbar }}
-        {{> main }}
-        {{> footer }}
+        {{> frmlogin }}
         {{> scripts }}
     </body>
 </html>
