--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,19 +1,16 @@
+<header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Fixed navbar</a>
+    <a class="navbar-brand" href="#">{{ brand }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        {{#each navlinks}}
+        <li class="nav-item {{#if active}}active{{/if}}">
+          <a class="nav-link {{#if disabled}}disabled{{/if}}" href="{{ url }}"{{#if disabled}} tabindex="-1" aria-disabled="true"{{/if}}>{{ label }} {{#if active}}<span class="sr-only">(current)</span>{{/if}}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
+        {{/each}}
       </ul>
       <form class="form-inline mt-2 mt-md-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -21,3 +18,4 @@
       </form>
     </div>
   </nav>
+</header>
