--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,9 +2,11 @@
 <html lang="en" class="h-100">
     <head>
         {{> header }}
+        <link rel="stylesheet" href="/styles/standard.css">
     </head>
     <body class="d-flex flex-column h-100">
         {{> navbar }}
+        {{> scroller }}
         {{> main }}
         {{> footer }}
         {{> scripts }}
