--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
     <head>
         {{> header }}
-        <link href="/partials/floating-labels.css" rel="stylesheet">
+        <link href="/styles/login.css" rel="stylesheet">
     </head>
     <body class="d-flex flex-column h-100">
         {{> frmlogin }}
