Add Web Sockets

--- a/views/partials/scroller.hbs
+++ b/views/partials/scroller.hbs
@@ -1,16 +1,11 @@
 <div class="nav-scroller bg-white shadow-sm">
   <nav class="nav nav-underline">
-    <a class="nav-link active" href="#">Dashboard</a>
-    <a class="nav-link" href="#">
-      Friends
-      <span class="badge badge-pill bg-light align-text-bottom">27</span>
+    {{#each scrollers}}
+    <a class="nav-link {{#if active}}active{{/if}}" href="{{ url }}">{{ label }}
+      {{#if badge.show}}
+      <span class="badge badge-pill align-text-bottom {{ badge.style }}">{{ badge.value }}</span>
+      {{/if}}
     </a>
-    <a class="nav-link" href="#">Explore</a>
-    <a class="nav-link" href="#">Suggestions</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
-    <a class="nav-link" href="#">Link</a>
+    {{/each}}
   </nav>
 </div>
