--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -14,3 +14,6 @@
 <link rel="mask-icon" href="/docs/4.5/assets/img/favicons/safari-pinned-tab.svg" color="#563d7c">
 <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon.ico">
 <meta name="msapplication-config" content="/docs/4.5/assets/img/favicons/browserconfig.xml">
+
+<script src="/scripts/socket.io.js"></script>
+<script src="/scripts/socket.js"></script>
