--- a/views/partials/main.hbs
+++ b/views/partials/main.hbs
@@ -1,7 +1,7 @@
 <main role="main" class="flex-shrink-0">
   <div class="container">
-    <h1 class="mt-5">Sticky footer with fixed navbar</h1>
-    <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.</p>
-    <p>Back to <a href="/docs/4.5/examples/sticky-footer/">the default sticky footer</a> minus the navbar.</p>
+    <button type="button" class="btn btn-danger btn-lg">Panic Button</button>
+    <h1 class="mt-5">{{ main.title }}</h1>
+    <p class="lead">{{ main.lead }}</p>
   </div>
 </main>
