--- a/views/partials/main.hbs
+++ b/views/partials/main.hbs
@@ -1,5 +1,5 @@
 <main role="main" class="flex-shrink-0">
-  <button type="button" class="btn btn-danger btn-lg">Panic Button</button>
+  <button type="button" class="btn btn-danger btn-lg" onclick="socket.emit('events', { text: 'test' });">Panic Button</button>
   <div class="container">
     <h1 class="mt-5">{{ main.title }}</h1>
     <p class="lead">{{ main.lead }}</p>
