Add Socket Support

--- a/views/partials/main.hbs
+++ b/views/partials/main.hbs
@@ -3,5 +3,6 @@
   <div class="container">
     <h1 class="mt-5">{{ main.title }}</h1>
     <p class="lead">{{ main.lead }}</p>
+    <input type="text" /> <input type="button"/>
   </div>
 </main>
