Add Custom Alert Event

--- a/views/partials/main.hbs
+++ b/views/partials/main.hbs
@@ -1,6 +1,7 @@
 <main role="main" class="flex-shrink-0">
-  <button type="button" class="btn btn-danger btn-lg" onclick="socket.emit('events', { text: 'test' });">Panic Button</button>
   <div class="container">
+    <div id="alert-panic" class="alert alert-danger" role="alert">Alert Triggered!</div>
+    <button id="btnPanic" type="button" class="btn btn-danger btn-lg" onclick="socket.emit('action', { type: 'button', name: 'panic' });">Panic Button</button>
     <h1 class="mt-5">{{ main.title }}</h1>
     <p class="lead">{{ main.lead }}</p>
     <input type="text" /> <input type="button"/>
