--- a/views/partials/main.hbs
+++ b/views/partials/main.hbs
@@ -1,6 +1,6 @@
 <main role="main" class="flex-shrink-0">
   <div class="container">
-    <div id="alert-panic" class="alert alert-danger" role="alert">Alert Triggered!</div>
+    <div id="alert-panic" class="alert alert-danger" role="alert" style="display: none;">Alert Triggered!</div>
     <button id="btnPanic" type="button" class="btn btn-danger btn-lg" onclick="socket.emit('action', { type: 'button', name: 'panic' });">Panic Button</button>
     <h1 class="mt-5">{{ main.title }}</h1>
     <p class="lead">{{ main.lead }}</p>
