--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,8 @@
     <body class="d-flex flex-column h-100">
         {{> navbar }}
         {{> scroller }}
-        {{> main }}
+        {{> status }}
+        {{> calls }}
         {{> footer }}
         {{> scripts }}
     </body>
